# touch-force-integrator

./: .gitignore  .gitmodules  README.md
TouchForceIntegrator/: .extSettings  .gitignore
TouchForceIntegrator/Appli/Inc/: FreeRTOSConfig.h  haptic_area.h  main.h  protocol_task.h  stm32h7rsxx_hal_conf.h  stm32h7rsxx_it.h  usb_host.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h  usbh_conf.h  usbh_platform.h  usbpd.h  usbpd_dpm_conf.h  usbpd_pwr_if.h  usbpd_usb_if.h
TouchForceIntegrator/Appli/Src/: haptic_area.c  main.c  protocol_task.c  stm32h7rsxx_hal_timebase_tim.c  stm32h7rsxx_it.c  usb_device.c  usb_host.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c  usbh_conf.c  usbh_platform.c  usbpd_dpm_core.c  (+2 more)
TouchForceIntegrator/MDK-ARM/: startup_stm32h7s7xx.s
TouchForceIntegrator/STM32CubeIDE/: .project
examples/: .gitignore  README.md
examples/DMA2D_RegToMemWithLCD/: .extSettings  .gitignore  .mxproject  .project  DMA2D_RegToMemWithLCD.ioc
examples/HID_RTOS/: .mxproject  .project  HID_RTOS.ioc
host/: pyproject.toml
host/tests/: test_link.py
host/touch_force_cli/: __main__.py  cli.py  link.py  touch_force_pb2.py
host/touch_force_webapp/: index.html
hw/loadcell-analog-interface/: .gitignore  fp-info-cache  loadcell-analog-interface-all-pos-fixed.csv  loadcell-analog-interface-all-pos.csv  loadcell-analog-interface-bom.csv  loadcell-analog-interface.kicad_pcb  loadcell-analog-interface.kicad_prl  loadcell-analog-interface.kicad_pro  loadcell-analog-interface.kicad_sch
protocol/: .gitignore  README.md  compile.sh  touch_force.options  touch_force.proto
(+88 files in other folders)
