[project]
name = "touch_force_cli"
version = "0.1.0"
description = "Host CLI for the touchforce.v1 serial protocol"
requires-python = ">=3.10"
dependencies = [
  "protobuf>=4",
  "pyserial>=3.5",
]

[project.scripts]
touch-force-cli = "touch_force_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["touch_force_cli"]

[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
